feat: jwt implementation
